    "run test at most once a day" check completely as package updates can
    happen several times a day. As a by-product this also fixes debci's -f
    option to force a test run.
  * backends/schroot/list-dependencies: Ignore individual apt-get failures as
    that gets called for binaries which don't exist on the selected
    architecture. Fixes operation for e. g. glib2.0.

  [ Antonio Terceiro ]
  * schroot backend: pass --session-id to adt-virt-schroot. This makes it
    easier to debug test suite that leave rogue schroot sessions behind.
  * rename `debci` binary to `debci-batch`. `debci` stays reserved for
    providing a entry point binary like `git` that will invoke subcommands
    that are kept out of $PATH to avoid cluttering the namespace.
  * debci-batch: make batch locking suite- and architecture-specific
  * debci-batch: add --offline and --online options. --offline will prevent
    new test runs from being started, and --online will revert to normal
    operation.

 -- Martin Pitt <mpitt@debian.org>  Sat, 05 Apr 2014 12:18:39 +0100

debci (0.5.2) unstable; urgency=medium

  * scripts/process-package: skip blame check without a dependencies diff
  * lib/*.sh: guard `set -eu` to avoid doing that on interactive shells
  * lib/functions.sh: fix list_binaries to work against the sources index
    - This fixes listing binaries coming from packages that were binNMUed

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 05 Apr 2014 20:03:22 -0300

debci (0.5.1) unstable; urgency=medium

  * etc/schroot/debci/fstab: improve schroot isolation
    - do not share /tmp with host
    - mount tmpfs at /dev/shm as quite some software needs it
  * test_shell_best_practices.sh: skip when checkbashisms is not available.
    - You don't want to install devscripts and all its dependencies when
      running as-installed tests
    - checking for best practices is only useful in development environments.
  * Use unified diff in "Change in the base system since last run"