@@ -1,0 +1,58 @@
+#!/bin/sh
+set -eu
+
+usage() {
+  cat <<EOF
+usage: $0 [OPTIONS]
+
+$@
+EOF
+}
+
+base=$(readlink -f $(dirname $(readlink -f $0))/..)
+. $base/lib/environment.sh
+
+root="$debci_data_basedir/chdist"
+name="${debci_suite}-${debci_arch}"
+
+# create new chdist if it doesn't exist already
+if [ ! -e "$root/$name" ]; then
+  echo "Creating new chdist $root/$name"
+  chdist -d "$root" create "$name" >/dev/null
+
+  # figure out default mirror from debootstrap scripts
+  DEF_MIRROR="http://ftp.debian.org/debian"
+  SUITE=$debci_suite
+  TARGET="$root/$name"
+  ARCH=$debci_arch
+  set +u
+  . /usr/share/debootstrap/functions
+  exec 4>&1
+  # this updates $DEF_MIRROR (Ubuntu, ports, ..)
+  . /usr/share/debootstrap/scripts/$debci_suite
+  set -u
+
+  # enable all components
+  if [ "${DEF_MIRROR%ubuntu*}" = "$DEF_MIRROR" ]; then
+    COMPONENTS="main contrib non-free"  # Debian
+  else
+    COMPONENTS="main restricted universe multiverse"  # Ubuntu
+  fi
+
+  # write apt sources.list
+  mkdir -p $TARGET/etc/apt/
+  echo "deb ${DEF_MIRROR} $SUITE $COMPONENTS
+deb-src ${DEF_MIRROR} $SUITE $COMPONENTS" > "$TARGET/etc/apt/sources.list"
+
+  # disable multi-arch
+  echo "Apt::Architectures {\"$ARCH\";};" > "$TARGET/etc/apt/apt.conf.d/97_no_multiarch"
+
+  # disable unnecessary srcpkgcache
+  echo 'Dir::Cache::srcpkgcache "";' > "$TARGET/etc/apt/apt.conf.d/98disable_cache"
+
+  # do not download translations
+  echo 'Acquire::Languages "none";' > "$TARGET/etc/apt/apt.conf.d/99translations"
+fi
+
+# update apt indexes
+chdist -d "$root" apt-get "$name" update
